# bitpolymul2

./: .gitignore  CMakeLists.txt  bc.c  bitmat_prod.h  bitpolymul-test.cpp  bitpolymul.c  btfy-test.cpp  build.py  byte_inline_func.h  defines.h  encode.c  gf2128_cantor_iso.c  gfext_aesni.h  msvc_runtime.cmake  run_test.sh  transpose.h  transpose_bit.h  trunc_btfy_tab_64.c
bitpolymul/: CMakeLists.txt  bc.cpp  bc_to_lch_gen_code.cpp  bc_to_mono_gen_code.cpp  bitpolymul.cpp  bpmDefines.h  btfy.cpp  btfy.h  encode.cpp
bitpolymul2/: CMakeLists.txt  bc.c  bc.cpp  bc.h  bc_to_gen_code.h  bc_to_lch_gen_code.c  bc_to_mono_gen_code.c  bitpolymul.cpp  bitpolymul.h  btfy.c  btfy.cpp  btfy.h  butterfly_net.cpp  butterfly_net.h  byte_inline_func.h  defines.h  encode.cpp  encode.h  gf2128_cantor_iso.h  gf264_cantor_iso.cpp  gf264_cantor_iso.h  transpose.h  transpose_bit.h  trunc_btfy_tab.c  trunc_btfy_tab.h  trunc_btfy_tab_64.h
bitpolymul2tests/: CMakeLists.txt  benchmark.h  bitpolymul-test.cpp
cmake/: Config.cmake.in  buildOptions.cmake  buildOptions.cmake.in  install.cmake
